--- a/src/layouts/ErrorLayout.astro
+++ b/src/layouts/ErrorLayout.astro
@@ -11,12 +11,12 @@ const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-afinate.svg" />
     <title>{title} | {siteConfig.name}</title>
     <meta name="description" content={description} />
     <script is:inline>
